--- a/.travis.yml
+++ b/.travis.yml
@@ -50,10 +50,10 @@ script:
 
 deploy:
   provider: heroku
-  api_key: "1e256782-e6ca-475f-9a17-9b7efc5943a1"
+  api_key: "0a0abb5e-fd05-4b2c-b091-d2cc3c8fb434"
   skip_cleanup: true
   strategy: api
   buildpack: https://github.com/ddollar/heroku-buildpack-multi
-  app: intense-forest-7815
+  app: murmuring-brook-4047
   on:
     php: 5.5
